--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name" translatable="false">English</string>
     <string name="button_skip">Skip</string>
     <string name="title_correct">Correct</string>
+    <string name="title_wrong" translatable="false">Wrong!</string>
     <string name="button_continues">Continues</string>
 </resources>
